--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ FLASK_ENV=development
 SECRET_KEY=your-secret-key-here
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=your_actual_password
+MYSQL_PASSWORD=Postagemark8#
 MYSQL_DATABASE=premier_league
-FOOTBALL_DATA_API_KEY=your_api_key
+FOOTBALL_DATA_API_KEY=e529bebadedf4f7e960d6ebf69af8de8
 FOOTBALL_DATA_API_URL=https://api.football-data.org/v4/ 
