--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
 Flask-Login==0.5.0
 mysql-connector-python==8.0.26
 requests==2.26.0
@@ -6,4 +7,5 @@ python-dotenv==0.19.0
 pandas==1.3.3
 numpy==1.21.2
 plotly==5.3.1
-Werkzeug==2.0.1 
+Werkzeug==2.0.1
+Flask-Limiter==3.3.0 
