--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 Flask-Login==0.5.0
 mysql-connector-python==8.0.26
+mysqlclient==2.2.7
 requests==2.26.0
 python-dotenv==0.19.0
 pandas==1.3.3
